--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+      "homepage": "https://vividbooks.github.io/geometry-app/",
       "name": "Matematická výuková aplikace s 3D objekty",
       "version": "0.1.0",
       "private": true,
@@ -53,10 +54,13 @@
       "devDependencies": {
             "@types/node": "^20.10.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "gh-pages": "^6.3.0",
             "vite": "6.3.5"
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build"
+            "build": "vite build",
+            "predeploy": "npm run build",
+            "deploy": "gh-pages -d dist"
       }
 }
