--- a/package.json
+++ b/package.json
@@ -61,6 +61,6 @@
             "dev": "vite",
             "build": "vite build",
             "predeploy": "npm run build",
-            "deploy": "gh-pages -d docs --force"
+            "deploy": "gh-pages -d docs"
       }
 }
