--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "homepage": "https://vividbooks.github.io/geometry-app/",
+      "homepage": "https://rysovani.vividbooks.com/",
       "name": "Matematická výuková aplikace s 3D objekty",
       "version": "0.1.0",
       "private": true,
@@ -60,7 +60,7 @@
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build && cp docs/index.html docs/404.html",
+            "build": "vite build && node -e \"require('fs').copyFileSync('docs/index.html','docs/404.html')\"",
             "predeploy": "npm run build",
             "deploy": "gh-pages -d docs"
       }
